# kaggle-rogii-wellbore

./: .gitignore  README.md  competition.toml  main.py  pyproject.toml  wiki_hooks.py
scripts/: blend_analysis.py  eda_sanity.py  kernel_src.py  make_kernel.py  run_cv.py
src/: cv.py  data.py  eval.py  submit.py
src/models/: __init__.py  baselines.py  blend.py  residual_lgbm.py  residual_stack.py  router.py  shrink.py  structure.py  tracker.py
